[package]
name = "ate-chip"
version = "0.1.0"
edition = "2021"
authors = ["Rowan Sakrejda-Leavitt <rowan@fawkes.io>"]
publish = false
description = """
A possibly functional chip-8 emulator
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
owo-colors = "3"
sdl2 =  "0.35"
rand = "0.8.4"


[dependencies.clap]
version = "3.0.7"
features = ["derive", "cargo"]

[profile.release]
codegen-units = 1
lto = true